Fixed overflow

--- a/frontend/src/Components/Profiles/Profile.css
+++ b/frontend/src/Components/Profiles/Profile.css
@@ -1,6 +1,6 @@
 .change-icon-background{
   height: 92%;
-  width: 100%;
+  width: 92%;
 }
 
 .icons {
@@ -18,10 +18,7 @@
     height: 100%;
 }
 
-.change-icon-background {
-    height: 100%;
-    width: 92%;
-}
+
 
 .preview-box {
     width: 50%;
